NXP-6623: use 'Long.valueOf' instead of 'new Long'